stage/ingress-controller/mom-server-stage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: mom-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - stage-api.momentum.sh
    secretName: tls-secret
  rules:
    - host: stage-api.momentum.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: momentum-server-service 
                port:
                  number: 8001
