stage/ingress-controller/monitoring-stage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - grafana-stage.potpie.ai
    secretName: monitoring-certificate-secret
  rules:
    - host: grafana-stage.potpie.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
